--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,15 @@
 		    <artifactId>tess4j</artifactId> 
 		    <version>2.0.1</version>    
 		</dependency>    
-   
+   		
+   		
+   		<!-- https://mvnrepository.com/artifact/org.htmlparser/htmlparser -->
+		<dependency>
+		    <groupId>org.htmlparser</groupId>
+		    <artifactId>htmlparser</artifactId>
+		    <version>2.1</version>
+		</dependency>
+   		
   		
   		 
   
